[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TTPWorkshop"
version = "0.0.1"
authors = [
  { name="TrendToPlain", email="grampus.community@gmail.com" },
]
description = "EVM Wallet"
readme = "README.md"
requires-python = ">=3.10.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trendtoplain/TTPWorkshop"
"Bug Tracker" = "https://github.com/trendtoplain/TTPWorkshop/issues"